[project]
name = "ocr-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "python-frontmatter>=1.1",
    "markdown>=3.6",
    "pillow>=12.2.0",
    "pdf2image>=1.17.0",
    "numpy>=2.4.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
